refactor codebase to be reusable
